<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cmd_vel2motionctrl</name>
  <version>0.1.0</version>
  <description>ROS 2 node to convert cmd_vel Twist messages into MotionCtrl messages.</description>
  <maintainer email="Yuhao_cao@Outlook.com">y</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>motion_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend> <!-- 如果需要 -->
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

